<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences_header_usuario">

        <EditTextPreference
            android:backgroundTintMode="screen"
            android:icon="@drawable/ic_baseline_account_circle_24_black"
            app:key="display_name"
            app:title="@string/preferences_usuario_nombre"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:icon="@drawable/ic_baseline_message_24"
            app:key="profile_message"
            app:title="@string/preferences_usuario_mensaje_perfil"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="auth_settings"
            app:title="@string/preferences_auth_header" />

    </PreferenceCategory>
</PreferenceScreen>